chap18を中心に追加する

--- a/rgsJava2/src/rgsJavap2/readme.html
+++ b/rgsJava2/src/rgsJavap2/readme.html
@@ -147,6 +147,195 @@
 <!--------------------------------------------------------------------------->
 <div id="tab018">
 <h1> 第18章　設計の原則とデザインパターン </h1>
+<h2> 18.1 優れた設計の優劣 </h2>
+<ul>
+<li>コード記述全般について
+    <ul>
+    <li>【DRY】同じ事を何度もやらない
+    <li>【PIE】意図や意味がわかり易い記述
+    </ul>
+<li>クラス設計について
+    <ul>
+    <li>【SRP】クラスの役割は１つだけ
+    <li>【OCP】修正なしで拡張可能に
+    </ul>
+<li>クラス間の関係について
+    <ul>
+    <li>【SDP】安定なものに依存する
+    <li>【ADP】循環依存、相互依存を避ける
+    </ul>
+</ul>
+<h2> 18.2 コード記述全般に関する原則 </h2>
+<h3>【DRY】同じことを何度もやらない </h3>
+<ul>
+<li>重複処理はメソッドにまとめる
+</ul>
+<h3>【PIE】意図や意味がわかり易い記述</h3>
+<ul>
+<li>適切な名前をつけましょう。読んだ人がそのクラスやメソッドの意味がわかるようなわかり易い名前を
+<li>マジックナンバーにも適切な名前を
+<li>複雑な処理はメソッドに分割して適切な名前を
+</ul>
+<h2> 18.3 クラスの設計に関する原則 </h2>
+<h3>【SRP】クラスの役割は１つだけ</h3>
+<ul>
+<li>単一責任原則。
+<li id="important">複数の役割を与えると修正時の影響度が広く複雑なものになってしまう。
+</ul>
+<h3>【OCP】修正なしで拡張可能に</h3>
+<ul>
+<li>開放閉鎖の原則。「拡張に対して開いていて、変更に対して閉じている」
+</ul>
+<h2> 18.4 クラスの関係に関する原則 </h2>
+<h3>クラスの依存関係</h3>
+<ul>
+<li>Aの修正によりBの修正も必要になる場合、「BはAに依存している（B->A）」という。
+</ul>
+<h3>【SDP】安定なものに依存する</h3>
+<ul>
+<li>各クラスの変更頻度には差分がある。
+<li>変更が発生しにくいクラスを「安定的なクラス」、変更頻度が高いクラスを「不安定なクラス」という。
+<li>「安定的クラス」に依存したつくりにする
+</ul>
+<h3>【ADP】循環依存、相互依存を避ける</h3>
+<ul>
+<li>相互依存（A <-> B）
+<li>循環依存（A -> B -> C -> A）
+</ul>
+<h2> 18.5 デザインパターン </h2>
+<h3>設計のパターン</h3>
+<ul>
+<li>設計上の定石パターン
+<li><div id="important">iterationパターン</div>１つずつ順に処理する際に矢印役を作りそのインスタンスで処理を行う
+</ul>
+<h3>パターンを利用するメリット</h3>
+<ul>
+<li>開発者間のコミュニケーションの円滑化
+<li>オブジェクト試行や設計原則の理解が深まる
+</ul>
+<h3>GoFパターン（23パターン）</h3>
+http://www.techscore.com/tech/DesignPattern/index.html/
+<table class="type07">
+    <thead>
+    <tr>
+        <th scope="cols">パターン名</th>
+        <th scope="cols">概要</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Itarator</th>
+        <td>要素の集まりを保有するオブジェクトの各要素に順番にアクセスする方法を提供するためのパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Adapter</th>
+        <td>インタフェースに互換性の無いクラス同士を組み合わせることを目的としたパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">TemplateMethod</th>
+        <td>template とは、文字の形に穴があいている薄いプラスチックの板のことです。その穴をペンでなぞると、手書きでも整った文字を書くことができます。しかし、マジックで書くのか、鉛筆で書くのか、それとも墨汁と筆を使ってみるのかということを考えてみると、実際にどのような文字になるのかはわかりません。template は、ただその形を決定する枠組みを提供するだけです。</td>
+    </tr>
+    <tr>
+        <th scope="row">FactoryMethod</th>
+        <td>インスタンスの生成をサブクラスに行わせることで、より柔軟に生成するインスタンスを選択することが可能となります。</td>
+    </tr>
+    <tr>
+        <th scope="row">Singleton</th>
+        <td>唯一の存在を保証するためのパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Prototype</th>
+        <td>あらかじめ用意しておいた「原型」からインスタンスを生成するようにするためのパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Builder</th>
+        <td>同じ作成過程で異なる表現形式の結果を得るためのパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">AbstractFactory</th>
+        <td>インスタンスの生成を専門に行うクラスを用意することで、整合性を必要とされる一連のオブジェクト群を間違いなく生成するためのパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Bridge</th>
+        <td>機能と実装を分離して、それぞれを独立に拡張することができるようになります。</td>
+    </tr>
+    <tr>
+        <th scope="row">Strategy</th>
+        <td>戦略の切り替えや追加が簡単に行えるようになります。</td>
+    </tr>
+    <tr>
+        <th scope="row">Composite</th>
+        <td>「容器と中身を同一視する」ことで、再帰的な構造の取り扱いを容易にするものです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Decorator</th>
+        <td>飾り枠と中身を同一視することで、より柔軟な機能拡張方法を提供します。</td>
+    </tr>
+    <tr>
+        <th scope="row">Visitor</th>
+        <td>「処理」を訪問者である Visitor オブジェクトに記述することで、処理の追加を簡単にします。</td>
+    </tr>
+    <tr>
+        <th scope="row">Chain of Responsibility</th>
+        <td>chain は「鎖」、responsibility は「責任」を意味します。したがって、 Chain of Responsibility は、「責任の鎖」と訳すことができます。Chain of Respoisibility パターンとは、「責任」を負ったものが、「鎖」状につながれた状態をイメージさせるパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">★★★Facade★★★</th>
+        <td>既存のクラスを複数組み合わせて使う手順を、「窓口」となるクラスを作ってシンプルに利用できるようにするパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Mediator</th>
+        <td>数のオブジェクトの間の調整を行いながら処理をすすめる必要が ある場合に利用すると威力を発揮するパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Observer</th>
+        <td>状態の変化を観察することを目的としたものですが、どちらかというと「観察」よりも「通知」に重点の置かれたものになっています。</td>
+    </tr>
+    <tr>
+        <th scope="row">Memento</th>
+        <td>インスタンスのあるときの状態をスナップショットとして保存しておくことで、 その時のインスタンスの状態を復元することを可能にするものです。</td>
+    </tr>
+    <tr>
+        <th scope="row">State</th>
+        <td>モノではなく、「状態」をクラスとして表現するパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Flyweight</th>
+        <td>インスタンスを共有することでリソースを無駄なく使うことに焦点を当てたパターンです。</td>
+    </tr>
+    <tr>
+        <th scope="row">Proxy</th>
+        <td>Proxyとは「代理人」という意味です。現実世界で代理人というと、弁護士や税理士など本人ができない仕事をするというイメージがありますが、Proxyパターンにおける代理人オブジェクトは、本人でなくてもできるような処理を任されます。そして代理人オブジェクトでできない処理は本人オブジェクトが引き受け、処理します。</td>
+    </tr>
+    <tr>
+        <th scope="row">Command</th>
+        <td>要求自体をオブジェクトにしてしまい、そのオブジェクトを引数に渡すようにします。</td>
+    </tr>
+    <tr>
+        <th scope="row">Interpreter</th>
+        <td>Interpreter とは、英語で「解釈者・説明者」を意味する単語です。 何らかのフォーマットで書かれたファイルの中身を、解析した結果に則って何らかの処理を行いたい場合があります。 Interpreter パターンとは、このような「解析した結果」得られた手順に則った処理を実現するために最適なパターンです。</td>
+    </tr>
+    </tbody>
+</table>
+<h3>SOLID原則</h3>
+<ul>
+<li>【SRP】クラスの役割は１つだけ
+<li>【OCP】修正なしで拡張可能に
+<li>【LSP】リスコフの置換原則
+<li>【ISP】インターフェイス分離の法則
+<li>【DIP】依存性逆転の原則
+</ul>
+
+
+
+
+
+
+<!--
+<ul>
+<li>
+</ul>
+ -->
 </div>
 <!--------------------------------------------------------------------------->
 <div id="tab019">
@@ -190,7 +379,7 @@ function ChangeTab(tabname) {
    document.getElementById(tabname).style.display = 'block';
 }
 // デフォルトのタブを選択
-ChangeTab('tab000');
+ChangeTab('tab018');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
