--- a/notTidyHpInfo/html/frametest/frame1.html
+++ b/notTidyHpInfo/html/frametest/frame1.html
@@ -5,6 +5,30 @@
 <title>iframe1</title>
 </head>
 <body>
+<h1>STSが起動しない場合の対処</h1>
+<ul>
+<li>Eclipseが起動しない「Java was started but returned exit code=13」で「http://blog.clock-up.jp/entry/2015/01/17/eclipse-exit-code-13」を参照
+<li>「-vm」は「-vmargs」の前に記載しないとダメ
+<li>うまく動いたSTS.ini
+<pre>
+-startup
+plugins/org.eclipse.equinox.launcher_1.3.200.v20160318-1642.jar
+--launcher.library
+plugins/org.eclipse.equinox.launcher.win32.win32.x86_64_1.1.400.v20160518-1444
+-product
+org.springsource.sts.ide
+--launcher.defaultAction
+openFile
+-vm
+G:\tools\java\jdk1.8.0_45\bin\javaw.exe
+-vmargs
+-Dosgi.requiredJavaVersion=1.8
+-Xms1024m
+-Xverify:none
+-Dorg.eclipse.swt.browser.IEVersion=10001
+-Xmx1200m
+</pre>
+</ul>
 
 </body>
 </html>
