スマホ画面のサンプルを追加

--- a/notTidyHpInfo/html/readme.html
+++ b/notTidyHpInfo/html/readme.html
@@ -18,6 +18,8 @@
 <!-- ヘッダ開始 -->
 <div id="header">
 <h1>未整頓情報 documents</h1>
+<h2><a href="#tab000" onclick="ChangeTab('tab000'); return false;">aaaaa</a>　
+<a href="#tab000" onclick="ChangeTab('tab000'); return false;">aaaaa</a></h2>
 </div>
 <!-- ヘッダ終了 -->
 <!-- ナビゲーション開始 -->
