２重カテゴリ作成

--- a/notTidyHpInfo/html/readme.html
+++ b/notTidyHpInfo/html/readme.html
@@ -18,49 +18,73 @@
 <!-- ヘッダ開始 -->
 <div id="header">
 <h1>未整頓情報 documents</h1>
-<h2><a href="#tab000" onclick="ChangeTab('tab000'); return false;">aaaaa</a>　
-<a href="#tab000" onclick="ChangeTab('tab000'); return false;">aaaaa</a></h2>
+<h4>
+<a href="#category000" onclick="ChangeCategory('category000'); return false;">カテゴリ０</a>　
+<a href="#category001" onclick="ChangeCategory('category001'); return false;">カテゴリ１</a>　
+</h4>
 </div>
 <!-- ヘッダ終了 -->
 <!-- ナビゲーション開始 -->
 <div id="nav">
+<div id="category000">
 <ul>
-<li><a href="#tab000" onclick="ChangeTab('tab000'); return false;">STSが起動しない場合の対処</a>
-<li><a href="#tab000" onclick="ChangeTab('tab001'); return false;"> syntaxhighlighterメモ</a>
-<li><a href="#tab000" onclick="ChangeTab('tab002'); return false;">複数のコンテキストパスについて</a>
-<li><a href="#tab000" onclick="ChangeTab('tab003'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab004'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab005'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab006'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab007'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab008'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab009'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab010'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab011'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab012'); return false;">　</a>
-<li><a href="#tab000" onclick="ChangeTab('tab013'); return false;">　</a>
+<li><a href="#c000tab000" onclick="ChangeTab('c000tab000'); return false;">STSが起動しない場合の対処</a>
+<li><a href="#c000tab001" onclick="ChangeTab('c000tab001'); return false;">syntaxhighlighterメモ</a>
+<li><a href="#c000tab002" onclick="ChangeTab('c000tab002'); return false;">複数のコンテキストパスについて</a>
+<li><a href="#c000tab003" onclick="ChangeTab('c000tab003'); return false;">　</a>
+<li><a href="#c000tab004" onclick="ChangeTab('c000tab004'); return false;">　</a>
+<li><a href="#c000tab005" onclick="ChangeTab('c000tab005'); return false;">　</a>
+<li><a href="#c000tab006" onclick="ChangeTab('c000tab006'); return false;">　</a>
+<li><a href="#c000tab007" onclick="ChangeTab('c000tab007'); return false;">　</a>
+<li><a href="#c000tab008" onclick="ChangeTab('c000tab008'); return false;">　</a>
+<li><a href="#c000tab009" onclick="ChangeTab('c000tab009'); return false;">　</a>
+<li><a href="#c000tab010" onclick="ChangeTab('c000tab010'); return false;">　</a>
+<li><a href="#c000tab011" onclick="ChangeTab('c000tab011'); return false;">　</a>
+<li><a href="#c000tab012" onclick="ChangeTab('c000tab012'); return false;">　</a>
+<li><a href="#c000tab013" onclick="ChangeTab('c000tab013'); return false;">　</a>
 </ul>
-</div>
+</div><!-- <div id="category000"> -->
+<div id="category001">
+<ul>
+<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">カテゴリ０</a>
+<li><a href="#c001tab001" onclick="ChangeTab('c001tab001'); return false;">カテゴリ１</a>
+<li><a href="#c001tab002" onclick="ChangeTab('c001tab002'); return false;">カテゴリ２</a>
+<li><a href="#c001tab003" onclick="ChangeTab('c001tab003'); return false;">　</a>
+<li><a href="#c001tab004" onclick="ChangeTab('c001tab004'); return false;">　</a>
+<li><a href="#c001tab005" onclick="ChangeTab('c001tab005'); return false;">　</a>
+<li><a href="#c001tab006" onclick="ChangeTab('c001tab006'); return false;">　</a>
+<li><a href="#c001tab007" onclick="ChangeTab('c001tab007'); return false;">　</a>
+<li><a href="#c001tab008" onclick="ChangeTab('c001tab008'); return false;">　</a>
+<li><a href="#c001tab009" onclick="ChangeTab('c001tab009'); return false;">　</a>
+<li><a href="#c001tab010" onclick="ChangeTab('c001tab010'); return false;">　</a>
+<li><a href="#c001tab011" onclick="ChangeTab('c001tab011'); return false;">　</a>
+<li><a href="#c001tab012" onclick="ChangeTab('c001tab012'); return false;">　</a>
+<li><a href="#c001tab013" onclick="ChangeTab('c001tab013'); return false;">　</a>
+</ul>
+</div><!-- <div id="category000"> -->
+
+
+</div><!-- <div id="nav"> -->
 <!-- ナビゲーション終了 -->
 <!-- メインカラム開始 -->
 <div id="content">
 <!--------------------------------------------------------------------------->
 <!-- 大分類  -->
 <!--------------------------------------------------------------------------->
-<div id="tab000"><iframe src="./pages/tab000.html" height="999px"></iframe></div>
-<div id="tab001"><iframe src="./pages/tab001.html" height="999px"></iframe></div>
-<div id="tab002"><iframe src="./pages/tab002.html" height="999px"></iframe></div>
-<div id="tab003"><iframe src="./pages/tab003.html" height="999px"></iframe></div>
-<div id="tab004"><iframe src="./pages/tab004.html" height="999px"></iframe></div>
-<div id="tab005"><iframe src="./pages/tab005.html" height="999px"></iframe></div>
-<div id="tab006"><iframe src="./pages/tab006.html" height="999px"></iframe></div>
-<div id="tab007"><iframe src="./pages/tab007.html" height="999px"></iframe></div>
-<div id="tab008"><iframe src="./pages/tab008.html" height="999px"></iframe></div>
-<div id="tab009"><iframe src="./pages/tab009.html" height="999px"></iframe></div>
-<div id="tab010"><iframe src="./pages/tab010.html" height="999px"></iframe></div>
-<div id="tab011"><iframe src="./pages/tab011.html" height="999px"></iframe></div>
-<div id="tab012"><iframe src="./pages/tab012.html" height="999px"></iframe></div>
-<div id="tab013"><iframe src="./pages/tab013.html" height="999px"></iframe></div>
+<div id="c000tab000"><iframe src="./pages/c000tab000.html" height="999px"></iframe></div>
+<div id="c000tab001"><iframe src="./pages/c000tab001.html" height="999px"></iframe></div>
+<div id="c000tab002"><iframe src="./pages/c000tab002.html" height="999px"></iframe></div>
+<div id="c000tab003"><iframe src="./pages/c000tab003.html" height="999px"></iframe></div>
+<div id="c000tab004"><iframe src="./pages/c000tab004.html" height="999px"></iframe></div>
+<div id="c000tab005"><iframe src="./pages/c000tab005.html" height="999px"></iframe></div>
+<div id="c000tab006"><iframe src="./pages/c000tab006.html" height="999px"></iframe></div>
+<div id="c000tab007"><iframe src="./pages/c000tab007.html" height="999px"></iframe></div>
+<div id="c000tab008"><iframe src="./pages/c000tab008.html" height="999px"></iframe></div>
+<div id="c000tab009"><iframe src="./pages/c000tab009.html" height="999px"></iframe></div>
+<div id="c000tab010"><iframe src="./pages/c000tab010.html" height="999px"></iframe></div>
+<div id="c000tab011"><iframe src="./pages/c000tab011.html" height="999px"></iframe></div>
+<div id="c000tab012"><iframe src="./pages/c000tab012.html" height="999px"></iframe></div>
+<div id="c000tab013"><iframe src="./pages/c000tab013.html" height="999px"></iframe></div>
 <!--------------------------------------------------------------------------->
 </div><!-- <div id="content"> -->
 <!-- メインカラム終了 -->
@@ -74,26 +98,35 @@
 <!-- ------------------------------------------------------------------------------- -->
 <script type="text/javascript">
 function ChangeTab(tabname) {
-   // 全部消す
-   document.getElementById('tab000').style.display = 'none';
-   document.getElementById('tab001').style.display = 'none';
-   document.getElementById('tab002').style.display = 'none';
-   document.getElementById('tab003').style.display = 'none';
-   document.getElementById('tab004').style.display = 'none';
-   document.getElementById('tab005').style.display = 'none';
-   document.getElementById('tab006').style.display = 'none';
-   document.getElementById('tab007').style.display = 'none';
-   document.getElementById('tab008').style.display = 'none';
-   document.getElementById('tab009').style.display = 'none';
-   document.getElementById('tab010').style.display = 'none';
-   document.getElementById('tab011').style.display = 'none';
-   document.getElementById('tab012').style.display = 'none';
-   document.getElementById('tab013').style.display = 'none';
-   // 指定箇所のみ表示
-   document.getElementById(tabname).style.display = 'block';
+	   // 全部消す
+	   document.getElementById('c000tab000').style.display = 'none';
+	   document.getElementById('c000tab001').style.display = 'none';
+	   document.getElementById('c000tab002').style.display = 'none';
+	   document.getElementById('c000tab003').style.display = 'none';
+	   document.getElementById('c000tab004').style.display = 'none';
+	   document.getElementById('c000tab005').style.display = 'none';
+	   document.getElementById('c000tab006').style.display = 'none';
+	   document.getElementById('c000tab007').style.display = 'none';
+	   document.getElementById('c000tab008').style.display = 'none';
+	   document.getElementById('c000tab009').style.display = 'none';
+	   document.getElementById('c000tab010').style.display = 'none';
+	   document.getElementById('c000tab011').style.display = 'none';
+	   document.getElementById('c000tab012').style.display = 'none';
+	   document.getElementById('c000tab013').style.display = 'none';
+	   // 指定箇所のみ表示
+	   document.getElementById(tabname).style.display = 'block';
 }
-// デフォルトのタブを選択
-ChangeTab('tab002');
+function ChangeCategory(categoryname) {
+	   // 全部消す
+	   document.getElementById('category000').style.display = 'none';
+	   document.getElementById('category001').style.display = 'none';
+	   // 指定箇所のみ表示
+	   document.getElementById(categoryname).style.display = 'block';
+}
+//デフォルトのカテゴリを選択
+ChangeCategory('category000');
+//デフォルトのタブを選択
+ChangeTab('c000tab000');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
