ブログの種になる形式を追加

--- a/notTidyHpInfo/html/readme.html
+++ b/notTidyHpInfo/html/readme.html
@@ -20,7 +20,9 @@
 <h1>未整頓情報 documents</h1>
 <h4>
 <a href="#category000" onclick="ChangeCategory('category000'); return false;">knowhow集</a>　
-<a href="#category001" onclick="ChangeCategory('category001'); return false;">資格系</a>　
+<a href="#category001" onclick="ChangeCategory('category001'); return false;">知識編</a>　
+<a href="#category002" onclick="ChangeCategory('category002'); return false;">資格編</a>　
+<a href="#category003" onclick="ChangeCategory('category003'); return false;">実践構築編</a>　
 </h4>
 </div>
 <!-- ヘッダ終了 -->
@@ -31,60 +33,65 @@
 <li><a href="#c000tab000" onclick="ChangeTab('c000tab000'); return false;">STSが起動しない場合の対処</a>
 <li><a href="#c000tab001" onclick="ChangeTab('c000tab001'); return false;">syntaxhighlighterメモ</a>
 <li><a href="#c000tab002" onclick="ChangeTab('c000tab002'); return false;">複数のコンテキストパスについて</a>
-<li><a href="#c000tab003" onclick="ChangeTab('c000tab003'); return false;">　</a>
-<li><a href="#c000tab004" onclick="ChangeTab('c000tab004'); return false;">　</a>
-<li><a href="#c000tab005" onclick="ChangeTab('c000tab005'); return false;">　</a>
-<li><a href="#c000tab006" onclick="ChangeTab('c000tab006'); return false;">　</a>
-<li><a href="#c000tab007" onclick="ChangeTab('c000tab007'); return false;">　</a>
-<li><a href="#c000tab008" onclick="ChangeTab('c000tab008'); return false;">　</a>
-<li><a href="#c000tab009" onclick="ChangeTab('c000tab009'); return false;">　</a>
-<li><a href="#c000tab010" onclick="ChangeTab('c000tab010'); return false;">　</a>
-<li><a href="#c000tab011" onclick="ChangeTab('c000tab011'); return false;">　</a>
-<li><a href="#c000tab012" onclick="ChangeTab('c000tab012'); return false;">　</a>
-<li><a href="#c000tab013" onclick="ChangeTab('c000tab013'); return false;">　</a>
 </ul>
 </div><!-- <div id="category000"> -->
 <div id="category001">
 <ul>
-<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
+<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">アーキテクチャ</a>
 <li><a href="#c001tab001" onclick="ChangeTab('c001tab001'); return false;">　</a>
 <li><a href="#c001tab002" onclick="ChangeTab('c001tab002'); return false;">　</a>
-<li><a href="#c001tab003" onclick="ChangeTab('c001tab003'); return false;">　</a>
-<li><a href="#c001tab004" onclick="ChangeTab('c001tab004'); return false;">　</a>
-<li><a href="#c001tab005" onclick="ChangeTab('c001tab005'); return false;">　</a>
-<li><a href="#c001tab006" onclick="ChangeTab('c001tab006'); return false;">　</a>
-<li><a href="#c001tab007" onclick="ChangeTab('c001tab007'); return false;">　</a>
-<li><a href="#c001tab008" onclick="ChangeTab('c001tab008'); return false;">　</a>
-<li><a href="#c001tab009" onclick="ChangeTab('c001tab009'); return false;">　</a>
-<li><a href="#c001tab010" onclick="ChangeTab('c001tab010'); return false;">　</a>
-<li><a href="#c001tab011" onclick="ChangeTab('c001tab011'); return false;">　</a>
-<li><a href="#c001tab012" onclick="ChangeTab('c001tab012'); return false;">　</a>
-<li><a href="#c001tab013" onclick="ChangeTab('c001tab013'); return false;">　</a>
 </ul>
-</div><!-- <div id="category000"> -->
-
-
+</div><!-- <div id="category001"> -->
+<div id="category002">
+<ul>
+<li><a href="#c002tab000" onclick="ChangeTab('c002tab000'); return false;">　</a>
+<li><a href="#c002tab001" onclick="ChangeTab('c002tab001'); return false;">　</a>
+<li><a href="#c002tab002" onclick="ChangeTab('c002tab002'); return false;">　</a>
+</ul>
+</div><!-- <div id="category002"> -->
+<div id="category003">
+<ul>
+<li><a href="#c003tab000" onclick="ChangeTab('c003tab000'); return false;">　</a>
+<li><a href="#c003tab001" onclick="ChangeTab('c003tab001'); return false;">　</a>
+<li><a href="#c003tab002" onclick="ChangeTab('c003tab002'); return false;">　</a>
+</ul>
+</div><!-- <div id="category003"> -->
 </div><!-- <div id="nav"> -->
 <!-- ナビゲーション終了 -->
 <!-- メインカラム開始 -->
 <div id="content">
 <!--------------------------------------------------------------------------->
-<!-- 大分類  -->
+<!-- カテゴリ単位  -->
 <!--------------------------------------------------------------------------->
+<div id="category000">
 <div id="c000tab000"><iframe src="./pages/c000tab000.html" height="999px"></iframe></div>
 <div id="c000tab001"><iframe src="./pages/c000tab001.html" height="999px"></iframe></div>
 <div id="c000tab002"><iframe src="./pages/c000tab002.html" height="999px"></iframe></div>
-<div id="c000tab003"><iframe src="./pages/c000tab003.html" height="999px"></iframe></div>
-<div id="c000tab004"><iframe src="./pages/c000tab004.html" height="999px"></iframe></div>
-<div id="c000tab005"><iframe src="./pages/c000tab005.html" height="999px"></iframe></div>
-<div id="c000tab006"><iframe src="./pages/c000tab006.html" height="999px"></iframe></div>
-<div id="c000tab007"><iframe src="./pages/c000tab007.html" height="999px"></iframe></div>
-<div id="c000tab008"><iframe src="./pages/c000tab008.html" height="999px"></iframe></div>
-<div id="c000tab009"><iframe src="./pages/c000tab009.html" height="999px"></iframe></div>
-<div id="c000tab010"><iframe src="./pages/c000tab010.html" height="999px"></iframe></div>
-<div id="c000tab011"><iframe src="./pages/c000tab011.html" height="999px"></iframe></div>
-<div id="c000tab012"><iframe src="./pages/c000tab012.html" height="999px"></iframe></div>
-<div id="c000tab013"><iframe src="./pages/c000tab013.html" height="999px"></iframe></div>
+</div><!-- <div id="category000"> -->
+<!--------------------------------------------------------------------------->
+<!-- カテゴリ単位  -->
+<!--------------------------------------------------------------------------->
+<div id="category001">
+<div id="c001tab000"><iframe src="./pages/c001tab000.html" height="999px"></iframe></div>
+<div id="c001tab001"><iframe src="./pages/c001tab001.html" height="999px"></iframe></div>
+<div id="c001tab002"><iframe src="./pages/c001tab002.html" height="999px"></iframe></div>
+</div><!-- <div id="category001"> -->
+<!--------------------------------------------------------------------------->
+<!-- カテゴリ単位  -->
+<!--------------------------------------------------------------------------->
+<div id="category002">
+<div id="c002tab000"><iframe src="./pages/c002tab000.html" height="999px"></iframe></div>
+<div id="c002tab001"><iframe src="./pages/c002tab001.html" height="999px"></iframe></div>
+<div id="c002tab002"><iframe src="./pages/c002tab002.html" height="999px"></iframe></div>
+</div><!-- <div id="category002"> -->
+<!--------------------------------------------------------------------------->
+<!-- カテゴリ単位  -->
+<!--------------------------------------------------------------------------->
+<div id="category003">
+<div id="c003tab000"><iframe src="./pages/c003tab000.html" height="999px"></iframe></div>
+<div id="c003tab001"><iframe src="./pages/c003tab001.html" height="999px"></iframe></div>
+<div id="c003tab002"><iframe src="./pages/c003tab002.html" height="999px"></iframe></div>
+</div><!-- <div id="category003"> -->
 <!--------------------------------------------------------------------------->
 </div><!-- <div id="content"> -->
 <!-- メインカラム終了 -->
@@ -99,20 +106,22 @@
 <script type="text/javascript">
 function ChangeTab(tabname) {
 	   // 全部消す
+	   // カテゴリ単位
 	   document.getElementById('c000tab000').style.display = 'none';
 	   document.getElementById('c000tab001').style.display = 'none';
 	   document.getElementById('c000tab002').style.display = 'none';
-	   document.getElementById('c000tab003').style.display = 'none';
-	   document.getElementById('c000tab004').style.display = 'none';
-	   document.getElementById('c000tab005').style.display = 'none';
-	   document.getElementById('c000tab006').style.display = 'none';
-	   document.getElementById('c000tab007').style.display = 'none';
-	   document.getElementById('c000tab008').style.display = 'none';
-	   document.getElementById('c000tab009').style.display = 'none';
-	   document.getElementById('c000tab010').style.display = 'none';
-	   document.getElementById('c000tab011').style.display = 'none';
-	   document.getElementById('c000tab012').style.display = 'none';
-	   document.getElementById('c000tab013').style.display = 'none';
+	   // カテゴリ単位
+	   document.getElementById('c001tab000').style.display = 'none';
+	   document.getElementById('c001tab001').style.display = 'none';
+	   document.getElementById('c001tab002').style.display = 'none';
+	   // カテゴリ単位
+	   document.getElementById('c002tab000').style.display = 'none';
+	   document.getElementById('c002tab001').style.display = 'none';
+	   document.getElementById('c002tab002').style.display = 'none';
+	   // カテゴリ単位
+	   document.getElementById('c003tab000').style.display = 'none';
+	   document.getElementById('c003tab001').style.display = 'none';
+	   document.getElementById('c003tab002').style.display = 'none';
 	   // 指定箇所のみ表示
 	   document.getElementById(tabname).style.display = 'block';
 }
@@ -120,13 +129,15 @@ function ChangeCategory(categoryname) {
 	   // 全部消す
 	   document.getElementById('category000').style.display = 'none';
 	   document.getElementById('category001').style.display = 'none';
+	   document.getElementById('category002').style.display = 'none';
+	   document.getElementById('category003').style.display = 'none';
 	   // 指定箇所のみ表示
 	   document.getElementById(categoryname).style.display = 'block';
 }
 //デフォルトのカテゴリを選択
-ChangeCategory('category000');
+ChangeCategory('category001');
 //デフォルトのタブを選択
-ChangeTab('c000tab000');
+ChangeTab('c001tab000');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
